# gnome-classifier

./: .dockerignore  .gitignore  Dockerfile  handler.py  pyproject.toml
cdk/: cdk.context.json  package-lock.json  package.json
cdk/lib/: classifier-pipeline-stack.ts  config.ts
cdk/lib/stacks/: classifier-stack.ts  monitoring-stack.ts
cdk/test/: cdk.test.ts
classifier/: cache.py  client.py  constants.py  db.py  pipeline.py  types.py  utils.py
classifier/adapters/: __init__.py  hyperliquid.py  kalshi.py  polymarket.py  types.py
classifier/cache/: __init__.py  base.py  redis.py  s3.py
classifier/client/: __init__.py  anthropic.py  voyage.py
classifier/relationships/: rule_based.py  semantic.py  structural.py
classifier/stages/: canonicalize.py  classify.py  entities.py  fetch.py  resolve.py
scripts/: bootstrap.py  dry_run.py  spot_check.py  testing.py  tunnel.py
tests/: conftest.py  test_cache.py  test_canonicalize.py  test_classify.py  test_entities.py  test_fetch.py  test_kalshi_adapter.py  test_relationships.py  test_resolve.py
tests/fixtures/: kalshi_events.json
