[tool.poetry]
name = "gnome-classifier"
version = "0.1.0"
description = "Prediction market classifier pipeline"
packages = [{include = "classifier"}, {include = "scripts"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
gnomepy = "^2.3.3"
boto3 = "*"
anthropic = "*"
voyageai = "*"
requests = "*"
click = "^8.4.1"
redis = "*"
psycopg2-binary = "*"
pgvector = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
moto = {version = "*", extras = ["s3"]}

[tool.poetry.group.lambda.dependencies]
awslambdaric = "*"

[tool.poetry.scripts]
dry-run = "scripts.dry_run:main"
bootstrap = "scripts.bootstrap:main"
tunnel = "scripts.tunnel:main"
